logs/ng.app.rubricator.algorithm.base.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ng'...
Listing './lib/python3.5/site-packages/ng/app'...
Listing './lib/python3.5/site-packages/ng/app/rubricator'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/algorithm'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/algorithm/base'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/algorithm/base/browser'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/algorithm/base/etc'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/algorithm/base/handler'...
Compiling './lib/python3.5/site-packages/ng/app/rubricator/algorithm/base/handler/rubrichandler.py'...
***   File "./lib/python3.5/site-packages/ng/app/rubricator/algorithm/base/handler/rubrichandler.py", line 18
    print "added"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ng/app/rubricator/algorithm/base/rubricalgorithmbase.py'...
***   File "./lib/python3.5/site-packages/ng/app/rubricator/algorithm/base/rubricalgorithmbase.py", line 39
    print "rubricateTo"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ng.app.rubricator.algorithm.base-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
